# titanview

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/tv-app/: Cargo.toml
crates/tv-app/src/: main.rs
crates/tv-core/: Cargo.toml
crates/tv-core/benches/: ingestion.rs
crates/tv-core/examples/: explore_file.rs  gen_fixtures.rs
crates/tv-core/src/: builtin_templates.rs  cfg.rs  classify.rs  disasm.rs  entropy.rs  histogram.rs  lib.rs  mapped_file.rs  pattern.rs  project.rs  signatures.rs  templates.rs  types.rs  xrefs.rs
crates/tv-gpu/: Cargo.toml
crates/tv-gpu/benches/: gpu_compute.rs
crates/tv-gpu/src/: context.rs  lib.rs
crates/tv-ui/: Cargo.toml
crates/tv-ui/src/: bookmarks_window.rs  cfg_window.rs  diff_window.rs  disasm_window.rs  export.rs  file_info_window.rs  hex_panel.rs  hilbert_window.rs  histogram_window.rs  lib.rs  minimap_panel.rs  perf_window.rs  script_window.rs  scripting.rs  search_window.rs  session.rs  signatures_window.rs  state.rs  struct_inspector.rs  syntax_highlight.rs  workspace.rs  xrefs_window.rs
examples/: README.md  generate_sample.py  generate_sample.rs  sample_file.tvts.titan  sample_header.template.json  simple_record.template.json
scripts/: gen_1gb.py
shaders/: classify.wgsl  diff.wgsl  entropy.wgsl  hilbert.wgsl  multi_pattern.wgsl  passthrough.wgsl  pattern_scan.wgsl
