[workspace]
resolver = "2"
members = [
    "crates/tv-core",
    "crates/tv-gpu",
    "crates/tv-ui",
    "crates/tv-app",
]

[workspace.dependencies]
memmap2 = "0.9"
rayon = "1.10"
memchr = "2.7"
wgpu = "23"
egui = "0.30"
eframe = "0.30"
egui_extras = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
log = "0.4"
rfd = "0.15"
capstone = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rhai = { version = "1.19", features = ["sync"] }
flate2 = "1.0"
rand = "0.8"
