[package]
name = "tv-core"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = { workspace = true }
rayon = { workspace = true }
memchr = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
capstone = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
flate2 = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "ingestion"
harness = false

[[example]]
name = "generate_large_sample"
